# TheOrganizer-Labor-Research-Platform

./: .dockerignore  .env.example  .gitignore  32bj_provisions_FINAL.json  32bj_provisions_for_review.json  32bj_review_decisions.json  AUDIT_2026_FILE_INVENTORY.md  AUDIT_CLAUDE_CODE_2026-02-18.md  AUDIT_LAUNCH_GUIDE.md  AUDIT_REPORT_GEMINI_2026-02-18.md  BENCHMARK_EMPLOYER_GUIDE.md  BLIND_AUDIT_PROMPT.md  CBA_DATABASE_BUILD_PLAN.md  CBA_PROVISION_TAXONOMY.md  CLAUDE.md  CLAUDE_CODE_V3_PLAN.md  CLAUDE_CODE_V4_PLAN.md  CLAUDE_CODE_V5_PLAN.md  CODEX_INVESTIGATION_REPORT_2026_03.md  COMPARISON_PROMPT_v2.md  COMPLETE_PROJECT_ROADMAP_2026_03.md  Complete Roadmap with commentary.md  DATA_SOURCE_EXPANSION_PLAN.md  DEMOGRAPHICS_ESTIMATION_SUMMARY_running.md  DEMOGRAPHICS_SYNTHESIS_2026_03_08.md  DOCUMENT_INDEX.md  Demographics Methodology Enhancement Roadmap_gemini.md  Dockerfile  EEO1_BDSHC_DATA_INTEGRATION_GUIDE.md  EPI_BENCHMARK_METHODOLOGY.md  FOUR_AUDIT_SYNTHESIS_v3.md  FRONTEND_REDESIGN_INSTRUCTIONS.md  FULL_AUDIT_PROMPT_2026.md  FULL_REMATCH_PROMPT.md  Future_Projects_Post_Launch_Goals.docx  Future_Projects_Post_Launch_Goals.md  GEMINI.md  GEMINI_AUDIT_PROMPT_v2.md  GEMINI_CBA_SOURCE_MAPPING_PROMPT.md  GEMINI_CBA_UNIFIED_PROMPT.md  (+230 more)
990 2025/: analyze_990_2025.py
990 employer files/: extract_990_employers.py
Start each AI/: CLAUDE.md  CODEX_TASKS_2026_02_21.md  CODEX_TASKS_2026_02_22.md  CODEX_TASKS_2026_03_05.md  DOCUMENT_RECONCILIATION_ANALYSIS.md  PROJECT_DIRECTORY.md  PROJECT_STATE.md  UNIFIED_PLATFORM_REDESIGN_SPEC.md  UNIFIED_ROADMAP_2026_02_19.md
api/: config.py  (+17 more)
(+2010 files in other folders)
